styles.css
.gravitas-one-regular {
  font-family: "Gravitas One", serif;
  font-weight: 400;
  font-style: normal;
}

body {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: Roboto, sans-serif;
}

body.day {
    background-image: url("images/daytime-sky.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

body.night {
    color: white;
    background-image: url("images/nightsky.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    opacity: .8;
}

body.night a,
body.night p {
    color: white;
}

body.night .sunrise-sunset p {
    color: white;
}

.thermometer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

h1 {
    font-size: 1.2rem;
}

h2 {
    font-size: 1rem;
}

.description {
    font-size: .9rem;
}

.weather-icon {
    width: 100%;
    max-width: 80px;
}

/* sunrise-sunset dom */
.sunrise-sunset {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.sunrise-sunset p {
    font-size: .8rem;
}

.sunrise-sunset img {
    width: 100%;
    max-width: 40px;
    height: 100%;
    max-height: 40px;
}

.sunrise-sunset svg {
    width: 100%;
    max-width: 40px
}


footer p,
footer a {
    color: black;
    font-size: .8rem;
}

footer a:hover {
    font-size: 1rem;
}

/* ==========
media queries
========== */
@media (min-width: 500px){
    .description {
        font-size: 1rem;
    }

    .sunrise-sunset {
        border: 1px solid rgb(85, 92, 72);
        border-radius: 10px;
        box-shadow: 3px 3px 8px grey;
        display: grid;
        grid-template-columns: 150px 150px 150px;
        grid-template-rows: 100px 30px;
        place-items: center;
        padding: 50px 30px;
        background-color: rgba(255, 255, 255, .1);  
    }

    .sunrise-sunset img {
        width: 100%;
        max-width: 70px;
        height: 100%;
        max-height: 70px;
    }

    .sunrise-sunset svg {
        width: 100%;
        max-width: 70px;
    }

    .sunrise-sunset p {
        font-size: .7rem;
    }

    .sunrise-img {
        grid-column: 1 / 2;
        justify-content: center;
    }

    .sunset-img {
        grid-column: 2 / 3;
        grid-row: 1 / 2;
    }

    .wind-img {
        grid-column: 3 / 4;
        grid-row: 1 / 2;
    } 

    h1 {
        font-size: 2.5rem;
    }

    h2 {
        font-size: 2rem;
    }

    p {
        font-size: 2rem;
    }

}

